# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-2ee8633a2346c12fc551831f6c0c46dc14e4e0fad8069e645902fd47a4a1e2bc.json  query-342d8b8c0edc2affc658ee0167fb3a540634afd1f258a2baba77b432545c8c9a.json
configuration/: base.yaml  production.yaml
migrations/: 20240601165028_make_status_not_null_in_subscriptions.sql  20240601232805_setting_one_token_maximum_per_user.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  templates.rs
src/domain/: subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
templates/: welcome.html  welcome.txt
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
