[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0"
actix-http = "=3.0.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
[dev-dependencies]
tokio = "1.37.0"
actix-rt = "2.0.0"
reqwest = "0.11.0"


