[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0"
actix-http = "=3.0.0"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
[dev-dependencies]
tokio = "1.37.0"
actix-rt = "2.0.0"
reqwest = "0.11.0"


